--- a/src/styles/MobileView.css
+++ b/src/styles/MobileView.css
@@ -9,15 +9,15 @@
           display: none;
      }
      .inner-container{
-          width: 95%;
+          width: 100%;
           justify-content: space-evenly;
      }
      .vendor-page-header h1{
           font-size: 1.8rem;
      }
      .product-square-container{
-          width: 47%;
-          margin: 0 2px 20px;
+          width: 45%;
+          margin: 0 0.5% 20px;
      }
      .desktop-header{
           padding: 5px 2%;
@@ -56,6 +56,79 @@
 
      .payment-plan-card{
           width: 80%;
+     }
+     .page-main .page-content{
+          width: 99%;
+          margin: 0 auto;
+          padding: 0;
+     }
+     /* .home-get-started-sec .row-title h3{
+          font-size: 1.2rem;
+     } */
+}
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 300px) {
+     :root{
+          font-size: 14px;
+     }
+     .contact-bar .contact-info div p{
+          display: none;
+     }
+     .inner-container{
+          width: 100%;
+          justify-content: space-evenly;
+     }
+     .vendor-page-header h1{
+          font-size: 1.8rem;
+     }
+     .product-square-container{
+          width: 90%;
+          margin: 0 0.5% 20px;
+     }
+     .desktop-header{
+          padding: 5px 2%;
+     }
+     .home-boosted-ads{
+          width: 95%;
+          padding: 0;
+     }
+     .home-best-sellers{
+          width: 95%;
+     }
+     .best-sellers-body{
+          width: 95%;
+     }
+     .home .hello-section{
+          justify-content: center;
+          padding: 20px 1% 10px 2%;
+     }
+     .home .hello-section .col{
+          border-radius: 10px;
+          width: 95%;
+          padding:10px 10px 20px;
+     }
+     .home .hello-section .col h1{
+          font-size: 1.6rem;
+     }
+
+     .inner-container .section-title {
+          font-size: 1.8rem;
+          margin: 2px 0;
+     }
+     .search-page .search-page-searchbar{
+          width: 95%;
+          margin: 10px auto;
+     }
+
+     .payment-plan-card{
+          width: 80%;
+     }
+     .page-main .page-content{
+          width: 99%;
+          margin: 0 auto;
+          padding: 0;
      }
      /* .home-get-started-sec .row-title h3{
           font-size: 1.2rem;
