updated the product square view and product page

--- a/src/styles/TabletView.css
+++ b/src/styles/TabletView.css
@@ -37,7 +37,14 @@
      }
 
      .advert-page {
-          width: 95%;
+          width: 100%;
+     }
+     .advert-page-mainAdvert{
+          justify-content: center;
+          margin: 0;
+     }
+     .advert-page-mainAdvert .col{
+          width: 100%;
      }
 }
 
