--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -139,8 +139,8 @@ a{
 }
 
 .product-share-icon{
-     width: 20px;
-     height: 20px;
+     width: 22.5px;
+     height: 22.5px;
      box-sizing: border-box;
      border-radius: 50%;
      background-color: var(--text-color-title);
@@ -148,12 +148,13 @@ a{
      position: absolute;
      top: 5px;
      right: 5px;
-     font-size: 14px;
+     font-size: 12px;
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: center;
      transition: all 0.4s;
+     z-index: 11;
 }
 
 .product-share-icon:hover{
@@ -1054,15 +1055,16 @@ a{
      flex-direction: row;
      align-items: center;
      justify-content: center;
-     border: 1px solid var(--back-color-gold2);
-     padding: 20px 10px;
-     border-radius: 20px;
+     /* border: 1px solid var(--back-color-gold2); */
+     box-shadow: 0.5px 0.5px 3px var(--text-color-para1);
+     padding:0;
+     border-radius: 2px;
 }
 
 .image-slider img{
      /* width: 90%; */
      max-height: 50vh;
-     border-radius: 10px;
+     border-radius: 0px;
      max-width: 95%;
 }
 
@@ -2352,7 +2354,7 @@ a{
      align-items: center;
      justify-content: flex-start;
      position: relative;
-     border-radius: 5px;
+     border-radius: 1px;
      margin:0 5px 10px 5px;
      padding: 0 0 5px 0 ;
      transition: all 0.4s;
@@ -2463,12 +2465,39 @@ a{
      color: var(--back-color-blue1);
 }
 .ad-image {
+     width: 100%;
+     margin: 0;
+     min-height: 150px;
+     max-height: 150px;
+     border-radius: 0px;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+     background-repeat: no-repeat;
+     background-position: center;
+     background-size: cover;
+     position: relative;
+     overflow: hidden;
+}
+
+.ad-image .background-img{
+     width: 100%;
+     z-index: 0;
+     filter: blur(12px);
+     position: absolute;
+     height: 100%;
+}
+
+.ad-image img{
      max-width: 100%;
      margin: 0;
      min-height: 150px;
      max-height: 150px;
      /* aspect-ratio: 10/10; */
-     border-radius: 5px;
+     border-radius: 0px;
+     backdrop-filter: blur(15px);
+     box-shadow: 0.2px 0.2px 3px var(--text-color-para1);
 }
 
 .ad-image:hover{
@@ -2930,17 +2959,17 @@ a{
 }
 
 .advert-page{
-     width: clamp(380px, 80%, 1600px);
-     margin: 10px auto;
+     width: 100%;
+     margin: 5px auto;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
-     padding: 10px 0;
+     padding: 0;
 }
 
 .advert-page-mainAdvert{
-     width: 97%;
+     width: 95%;
      display: flex;
      flex-direction: row;
      align-items: flex-start;
@@ -2950,7 +2979,7 @@ a{
 }
 
 .advert-page-mainAdvert .col{
-     width: clamp(370px, 48%, 1000px);
+     width:48%;
 }
 
 .advert-page-mainAdvert .col .cat{
@@ -3069,7 +3098,7 @@ a{
      flex-direction: column;
      padding: 10px;
      margin: 10px auto;
-     border-radius: 10px;
+     border-radius: 5px;
 }
 
 
