--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -1064,7 +1064,7 @@ a{
      border-radius: 2px;
 }
 
-.image-slider img{
+.image-slider img, .image-viewer .main-image img{
      /* width: 90%; */
      max-height: 50vh;
      border-radius: 0px;
@@ -1097,6 +1097,53 @@ a{
      background-color: var(--text-color-para1);
 }
 
+.image-viewer{
+     width: 100%;
+     position: relative;
+     display: flex;
+     flex-direction: row;
+     align-items: flex-start;
+     justify-content: space-between;
+     /* border: 1px solid var(--back-color-gold2); */
+     box-shadow: 0.5px 0.5px 3px var(--text-color-para1);
+     padding:0;
+     border-radius: 2px;
+}
+
+.image-viewer .side-images{
+     width: 15%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: flex-start;
+     padding: 5px 0;
+     max-height: 50vh;
+     overflow: hidden;
+     overflow-y: scroll;
+}
+
+.image-viewer .side-images img{
+     width: 90%;
+     margin-bottom: 5px;
+     cursor: pointer;
+     border-radius: 2px;
+}
+
+.image-viewer .side-images .active-image{
+     border: 1.5px solid var(--back-color-gold2);
+}
+
+
+
+
+.image-viewer .main-image{
+     width: 85%;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+     border: 1px solid var(--gray-text);
+}
 .home-boosted-ads{
      width: 100%;
      display: flex;
