--- a/src/styles/TabletView.css
+++ b/src/styles/TabletView.css
@@ -201,4 +201,9 @@
      .payment-plan-card{
           width: 45%;
      }
+     .product-square-container{
+          min-width: 35%;
+          width: 40%;
+          max-width: 40%;
+     }
 }
