--- a/src/styles/SpecialDevices.css
+++ b/src/styles/SpecialDevices.css
@@ -27,4 +27,9 @@
           width: 95%;
           margin: 0 auto;
      }
+     .product-square-container{
+          min-width: 20%;
+          width: 20%;
+          max-width: 21%;
+     }
 }
