--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -627,6 +627,7 @@ a{
      border: 2px solid var(--back-color-gold2);
      border-radius: 10px;
      display: flex;
+     flex-wrap: wrap;
      flex-direction: column;
      align-items: center;
      justify-content: flex-start;
