--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -24,6 +24,14 @@
      --basic-plan-color: #4515ad;
 }
 
+@keyframes loadingComp{
+     0%, 100%{
+          background-position: right;
+     }
+     50%{
+          background-position: left;
+     }
+}
 
 /* general styles */
 
@@ -1304,7 +1312,7 @@ a{
      position: relative;
      flex-wrap: nowrap;
      overflow-x: hidden;
-     padding: 0 3%;
+     padding: 0 0%;
      margin: 10px auto;
 }
 
@@ -2041,6 +2049,30 @@ a{
      /* background-color: #c0b6b624; */
 }
 
+.loading-comp{
+     margin: 20px 1%;
+     animation: loadingComp 1s  infinite;
+
+     border-radius: 16px;
+     width: 450px;
+     height: 250px;
+     background:  linear-gradient(to right, #f1f0f0, #c1c0c0, #f1f0f0);
+     background-size: 200%;
+     background-position: left;
+     animation: loadingComp 1s ease-out 0s infinite normal;
+}
+.loading-ad{
+     width: 18%;
+     box-shadow: 0.4px 0.5px 4px var(--text-color-para1);
+     min-height: 300px;
+     border-radius: 5px;
+}
+
+.loading-image{
+     width: 100%;
+     height: 100%;
+}
+
 .initial-loader{
      width: 100vw;
      height: 100vh;
@@ -2375,6 +2407,7 @@ a{
      display: flex;
      flex-direction: column;
      align-items: center;
+     padding: 0 2%;
 }
 
 .advert-edit-page .edit-title{
