--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -337,9 +337,9 @@ a{
 
 .search-page h3{
      width: 90%;
-     font-size: 1.6rem;
+     font-size: 1.1rem;
      color: var(--text-color-title);
-     font-weight: 800;
+     font-weight: 500;
      margin: 10px auto;
 }
 
@@ -352,13 +352,13 @@ a{
      justify-content: center;
      align-self: flex-start;
      padding: 0;
-     margin: 10px  5%;
-     background-color: var(--text-color-title-transparent);
+     margin: 10px  5% 10px 0;
+     /* background-color: var(--text-color-title-transparent); */
      border-radius: 10px;
 }
 
 .search-page-options{
-     width: 90%;
+     width: 100%;
      display: flex;
      flex-direction: row;
      align-items: center;
@@ -1609,19 +1609,29 @@ a{
      flex-direction: row;
      border-radius: 5px;
      overflow: hidden;
-     border: 1.5px solid var(--back-color-gold2);
+     border: 1.1px solid var(--back-color-gold2);
+     padding: 5px 0;
+     justify-content: space-evenly;
 }
 
-.search-bar-main input{
-     width: 42%;
+.search-bar-main .search-inputs{
+     width: 90%;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: space-evenly;
+     flex-wrap: wrap;
+}
+
+.search-bar-main .search-inputs input{
+     width: 36%;
      padding: 10px 6% 10px 2%;
      border: none;
-     border-radius: 0px;
-     border-right: 1.5px solid var(--gray-text);
-     border-left: 1.5px solid var(--gray-text);
+     border-radius: 5px;
+     border: 1px solid var(--gray-text); 
 }
 
-.search-bar-main input:focus{
+.search-bar-main .search-inputs input:focus{
      outline: none;
 
 }
@@ -1631,14 +1641,16 @@ a{
      color: var(--white-text);
      background-color: var(--back-color-gold2);
      font-size: 1.2rem;
-     width: 8%;
+     /* width: 6%; */
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: center;
      align-self: center;
      transition: all 1s;
-     padding: 10px 0;
+     padding: 10px 10px;
+     border-radius: 50%;
+     margin: 0 2px ;
 }
 
 .search-bar-main i:hover{
@@ -1647,14 +1659,15 @@ a{
      color: var(--back-color-gold2);
 }
 
-.search-bar-main select{
+.search-bar-main .search-inputs select{
      width: 30%;
-     cursor: pointer;
-     border-radius:0;
-     border: none;
+     cursor: pointer; 
+     padding: 10px 1% 10px 0.5%;
+     border-radius: 5px;
+     border: 1px solid var(--gray-text);
 }
 
-.search-bar-main select:focus{
+.search-bar-main .search-inputs select:focus{
      outline: none;
      border: none;
 }
