--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -1553,15 +1553,15 @@ a{
      background-color: var(--back-color-gold2);
      color: white;
      font-weight: 700;
-     font-size: 1.1rem ;
+     font-size: 0.9rem ;
      outline: none;
      border: none;
-     padding: 2.5px 20px ;
-     border-radius: 1rem;
+     padding: 2.5px 10px ;
+     border-radius: 15px;
      letter-spacing: 0.56px;
      border: 1.5px solid var(--back-color-gold2);
      transition: all 0.9s;
-     margin:  5px 5px;
+     margin:  5px 2.5px;
      width: auto;
 }
 
