--- a/src/styles/TabletView.css
+++ b/src/styles/TabletView.css
@@ -245,4 +245,15 @@
           border-radius: 10px;
           padding: 5px 10px;
      }
+
+     .horizontal-banner{
+          width: 95%;
+          flex-wrap: nowrap;
+          overflow-x: hidden;
+     }
+
+     .horizontal-banner .hr-banner{
+          width: 100%;
+          height: 100px;
+     }
 }
