--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -863,8 +863,9 @@ a{
      display: flex;
      flex-direction: column;
      border-radius: 15px;
-     padding: 01% 0% 2% 2%  ;
-     background-color: var(--back-color-red1);
+     padding: 01% 0% 1% 2%  ;
+     /* background-color: var(--back-color-red1); */
+
      width: 100%;
 }
 
@@ -876,7 +877,7 @@ a{
 } 
 
 .home-request-quote-header{
-     width: 100%;
+     width: 97%;
      display: flex;
      flex-direction: row;
      align-items: center;
@@ -1446,6 +1447,7 @@ a{
      flex-direction: row;
      align-items: center;
      justify-content: right;
+     /* background-color: var(--text-color-title); */
 }
 
 .contact-bar .contact-info{
@@ -1456,6 +1458,7 @@ a{
      flex-direction: row;
      justify-content: space-evenly;
      background-color: var(--back-color-gold1);
+     /* background-color: var(--text-color-title); */
      padding: 3px 10px;
      border-radius:0 0 0 50px  ; 
      flex-wrap: wrap-reverse;
@@ -3846,12 +3849,14 @@ a{
      width: 90%;
      display: flex;
      flex-direction: row;
-     justify-content: space-between;
+     justify-content: flex-start;
      align-items: center;
      border-radius: 5px;
      color: var(--white-text);
      margin: 10px auto;
-     flex-wrap: nowrap;
+     overflow-y: hidden;
+     overflow-x: scroll;
+
 }
 
 .horizontal-banner .hr-banner{
@@ -3859,6 +3864,7 @@ a{
      position: relative;
      height: 120px;
      cursor: pointer;
+     margin: 5px;
 }
 
 .horizontal-banner .hr-banner:hover .hover-content{
@@ -3895,7 +3901,7 @@ a{
 .horizontal-banner img{
      width: 100%;
      height: 100%;
-     box-shadow: 0.3px 0.3px 1px 0.3px var(--text-color-black) ;
+     border: 1px solid var(--back-color-blue1);
 }
 /*End of Banner styles */ 
 
