--- a/src/styles/TabletView.css
+++ b/src/styles/TabletView.css
@@ -248,12 +248,17 @@
 
      .horizontal-banner{
           width: 95%;
-          flex-wrap: nowrap;
-          overflow-x: hidden;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content:flex-start;
+          overflow-x: scroll;
+          /* flex-wrap: wrap; */
      }
 
      .horizontal-banner .hr-banner{
-          width: 100%;
+          min-width: 100%;
           height: 100px;
+          margin-right: 10px;
      }
 }
