--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -2627,8 +2627,8 @@ a{
      margin-top:5px;
      max-width: 85%;
      text-align: center;
-     text-overflow: ellipsis;
-     white-space: nowrap;
+     /* text-overflow: ellipsis; */
+     white-space: wrap;
      overflow: hidden;
 }
 .category-square p{
